@@ -162,6 +162,7 @@ EXTRA_DIST = \
 	leak-autofreepool-3.vgtest leak-autofreepool-3.stderr.exp \
 	leak-autofreepool-4.vgtest leak-autofreepool-4.stderr.exp \
 	leak-autofreepool-5.vgtest leak-autofreepool-5.stderr.exp \
+	leak-autofreepool-6.vgtest leak-autofreepool-6.stderr.exp \
 	leak-tree.vgtest leak-tree.stderr.exp \
 	leak-segv-jmp.vgtest leak-segv-jmp.stderr.exp \
 	lks.vgtest lks.stdout.exp lks.supp lks.stderr.exp \
